--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ng8 POC</title>
-  <base href="https://amir-suhail.github.io/wedding-invitation">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://amir-suhail.github.io/wedding-invitation/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="wedding-invitation/styles.ad2709cbd8301f6f2d9e.css"></head>
 <body>
